k8s/immich/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich
  template:
    metadata:
      labels:
        app: immich
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8081"
    spec:
      nodeSelector:
        kubernetes.io/hostname: "bunetzk8s"
      containers:
      - name: immich
        image: ghcr.io/immich-app/immich-server:v1.106.4
        command: [ "sh", "-c",
          '[ -d "/usr/src/app/upload/library" ] && ./start.sh || echo "Missing library folder in immich data"' ]
        imagePullPolicy: IfNotPresent
        ports:
          - name: http-port
            containerPort: 3001
          - name: server-metrics
            containerPort: 8081
        volumeMounts:
          - mountPath: /usr/src/app/upload
            name: immich-data
        resources:
          requests:
            memory: 128Mi
            cpu: 50m
          limits:
            memory: 1Gi
            cpu: 1000m
      volumes:
        - name: immich-data
          persistentVolumeClaim:
            claimName: immich-data-pvc
