k8s/immich/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: tensorchord/pgvecto-rs:pg16-v0.2.0
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: db-port
              containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              subPath: ./data
              name: postgres-data
          resources:
            requests:
              memory: 256Mi
              cpu: 50m
            limits:
              memory: 768Mi
              cpu: 500m
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: immich-postgres-pvc
