k8s/immich/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7.2.4
        imagePullPolicy: IfNotPresent
        ports:
          - name: redis
            containerPort: 6379
        resources:
          requests:
            memory: 32Mi
            cpu: 10m
          limits:
            memory: 128Mi
            cpu: 100m
