k8s/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: immich
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: http-port
  selector:
    app: immich
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: immich
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: redis
  selector:
    app: redis
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: immich
spec:
  ports:
    - name: db-port
      port: 5432
      targetPort: db-port
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machinelearning
  namespace: immich
spec:
  ports:
    - name: http-port
      port: 3003
      targetPort: http-port
  selector:
    app: immich-machinelearning
